<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_for_task_manager"
    tools:context=".WriteNewTaskActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutWithPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/design_for_item_tasks"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guidelineForImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imgUserGallery"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgBtnDeletePhoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />


        <ImageButton
            android:id="@+id/imgBtnEditPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/bg_main_edge"
            android:contentDescription="@string/btn_edit"
            android:padding="10dp"
            android:src="@android:drawable/ic_menu_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgUserGallery" />

        <ImageButton
            android:id="@+id/imgBtnDeletePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/bg_main_edge"
            android:contentDescription="@string/btn_delete"
            android:padding="10dp"
            android:src="@android:drawable/ic_menu_delete"
            app:layout_constraintBottom_toBottomOf="@+id/imgUserGallery"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineForImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.3"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edTxtNameTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints="@string/write_here_name_task"
        android:background="@drawable/design_for_item_tasks"
        android:ems="10"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:hint="@string/write_here_name_task"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutWithPhoto" />

    <EditText
        android:id="@+id/edTxtMainTextTask"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:autofillHints="@string/write_here_main_text_task"
        android:background="@drawable/design_for_item_tasks"
        android:ems="10"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="top|left"
        android:hint="@string/write_here_main_text_task"
        android:inputType="textMultiLine|text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxtNameTask" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddUserPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:alpha="0.6"
        android:backgroundTint="@color/bg_main_edge"
        android:clickable="true"
        android:contentDescription="@string/btn_add_photo"
        android:focusable="true"
        android:src="@drawable/ic_add_image"
        app:layout_constraintBottom_toBottomOf="@+id/edTxtMainTextTask"
        app:layout_constraintEnd_toEndOf="@+id/edTxtMainTextTask" />

    <Button
        android:id="@+id/btnSaveTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/bg_main_edge"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>